Bug 55564 - gma500_gfx does not suggest 1024x768 on LVDS
Summary: gma500_gfx does not suggest 1024x768 on LVDS
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-03 06:34 UTC by Gašper Sedej
Modified: 2013-02-28 10:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Gašper Sedej 2012-10-03 06:34:55 UTC
Hi

Please add 1024x768 and 800x600 modes as availible modes for LVDS on gma500_gfx.

I have Asus eee 1101HA with monitor 1366x768, which I use for presentations. In "xrandr", I just see mode 1366x768 (which projector does not support), but no 1024x768, which is ok for most devices. I have to add manually "xrandr --addmode LVDS-0 1024x768" to be able to have normal clone screen on both displays.
Comment 2 Chris Wilson 2013-02-28 10:18:22 UTC
commit 06618a9b3d9585508b0debd18d5b981636f98c54
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 3 13:25:19 2012 +0000

    Add missing GTF modes
    
    A fixed-mode output device like a panel will often only inform of its
    preferred mode through its EDID. However, the driver will adjust user
    specified modes for display through use of a panel-fitter allowing
    greater flexibility in upscaling. This is often used by games to set a
    low resolution for performance and use the panel fitter to fill the
    screen.
    
    v2: Use the presence of the 'scaling mode' connector property as an
    indication that a panel fitter is attached to that pipe.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55564


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.